K8s-deployment/numrah-api-servers/chat-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-server
  namespace: numrah
spec:
  selector:
    app: chat-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
