K8s-deployment/numrah-api-servers/chat-server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-server-ingress
  namespace: numrah
spec:
  defaultBackend:
    service:
      name: chat-server
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-server
                port:
                  number: 80
